--- a/programador-backend/package.json
+++ b/programador-backend/package.json
@@ -7,7 +7,7 @@
     "dev": "set NODE_ENV=development&& nodemon index.js",
     "prod": "set NODE_ENV=production&& nodemon index.js",
     "build": "npm install",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "programador-backend": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,10 +24,12 @@
     "jsonwebtoken": "^9.0.0",
     "node-fetch": "^2.6.9",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sweetalert2": "^11.7.3",
+    "sweetalert2": "^11.6.13",
     "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
