--- a/programador-backend/package.json
+++ b/programador-backend/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sweetalert2": "^11.6.13",
+    "xhr2": "^0.2.1",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
